--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "fs-extra": "^11.1.1",
+    "minio": "^7.1.1",
     "mongoose": "^7.3.2",
     "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
